tests/fail/fail-noret2.mc
int main()
{
  if (true) return 0;
  else print(1);
}
